modificacion del error newpost

--- a/templates/layouts/main.html
+++ b/templates/layouts/main.html
@@ -36,7 +36,7 @@
                     <a class="nav-link" href="/peliculas/">PELICULAS</a>
                 </li>
                 <li class="nav-item">
-                    <a class="nav-link" href="/post">+ NEW POST</a>
+                    <a class="nav-link" href="/post/">+ NEW POST</a>
                 </li>
                 <li class="nav-item">
                     <a class="nav-link" href="/horrorstory/">HORROR STORIES</a>
