--- a/templates/layouts/main.html
+++ b/templates/layouts/main.html
@@ -51,12 +51,12 @@
                 </li>
                 {% if user.is_authenticated %}
                 <li class="nav-item">
-                    <a class="nav-link" href="/logout">CERRAR SESIÒN</a>
+                    <a class="nav-link" href="/logout/">CERRAR SESIÒN</a>
                 </li>
                 {% else %}
                 <li class="nav-item">
                 </li>
-                <a class="nav-link" href="/login">INICIAR SESIÒN</a>
+                <a class="nav-link" href="/login/">INICIAR SESIÒN</a>
                 {% endif %}
             </ul>
             
